--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -121,62 +121,51 @@
                 </div>
                 <div class="col s12 m6">
                     <h5 class="cyan-text text-darken-3">Add Product to Cart</h5>
-                    
-                    <form class="form" action="#" method="POST">
-                        {% csrf_token %}
-                        <div class="row">
-                            <div class="input-field col s12">
-                                <select class="icons">
-                                <option value="" disabled selected>Choose Grind Option</option>
-                                <option value="bean" data-icon="{{ MEDIA_URL }}coffee_bean_icon.png">Whole Bean</option>
-                                <option value="coarse" data-icon="{{ MEDIA_URL }}coffee_coarse_grind_icon.png">Coarse</option>
-                                <option value="medium" data-icon="{{ MEDIA_URL }}coffee_medium_grind_icon.png">Medium</option>
-                                <option value="fine" data-icon="{{ MEDIA_URL }}coffee_fine_grind_icon.png">Fine</option>
-                                </select>
-                                <label>Select Grind</label>
-                            </div>
-
-                            <!-- Adapt from here -->
-
-                            <div class="input-field col s12">
-                                <p class="mt-3"><strong>Quantity:</strong></p>
-                                <div class="form-group w-50">
-                                    <div class="input-group">
-                                        <div class="input-group-prepend">
-                                            <button class="decrement-qty btn btn-black rounded-0" 
-                                                data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
-                                                <span class="icon">
-                                                    <i class="fas fa-minus"></i>
-                                                </span>
+                    <div class="col s12">
+                        <form class="form" action="#" method="POST">
+                            {% csrf_token %}
+                            <div class="row">
+                                <div class="input-field col s12 grind-option-selector">
+                                    <select class="icons grind-option-selector">
+                                        <option value="" disabled selected>Choose Grind Option</option>
+                                        <option value="bean" data-icon="{{ MEDIA_URL }}coffee_bean_icon.png">Whole Bean</option>
+                                        <option value="coarse" data-icon="{{ MEDIA_URL }}coffee_coarse_grind_icon.png">Coarse</option>
+                                        <option value="medium" data-icon="{{ MEDIA_URL }}coffee_medium_grind_icon.png">Medium</option>
+                                        <option value="fine" data-icon="{{ MEDIA_URL }}coffee_fine_grind_icon.png">Fine</option>
+                                    </select>
+                                    <label class="option-label">Select grind for your coffee first</label>
+                                </div>
+                                <div class="input-field col s12">
+                                    <p class="option-label">How many items would you like to add?</p>
+                                    <div class="quantity-input-group">
+                                        <div class="col s4 center-align">
+                                            <button class="change-qty btn" data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                                <span class="material-icons">remove</span>
                                             </button>
                                         </div>
-                                        <input class="form-control qty_input" type="number"
-                                            name="quantity" value="1" min="1" max="99"
-                                            data-item_id="{{ product.id }}"
-                                            id="id_qty_{{ product.id }}">
-                                        <div class="input-group-append">
-                                            <button class="btn"
-                                                data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
-                                                <span class="icon">
-                                                    <i class="fas fa-plus"></i>
-                                                </span>
+                                        <div class="col s4 center-align">
+                                            <input class="qty_input center-align" type="number" name="quantity" value="1" min="1" max="50" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                        </div>
+                                        <div class="col s4 center-align">
+                                            <button class="change-qty btn" data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                                <span class="material-icons">add</span>
                                             </button>
                                         </div>
                                     </div>
                                 </div>
+                                <div class="col s12">
+                                    <a href="{% url 'products' %}" class="btn">
+                                        <span class="icon">
+                                            <i class="fas fa-chevron-left"></i>
+                                        </span>
+                                        <span class="text-uppercase">Keep Shopping</span>
+                                    </a>
+                                    <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
+                                </div>
+                                <input type="hidden" name="redirect_url" value="{{ request.path }}">
                             </div>
-                            <div class="col{% if s %}-12 mt-2{% endif %}">
-                                <a href="{% url 'products' %}" class="btn">
-                                    <span class="icon">
-                                        <i class="fas fa-chevron-left"></i>
-                                    </span>
-                                    <span class="text-uppercase">Keep Shopping</span>
-                                </a>
-                                <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
-                            </div>
-                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
-                        </div>
-                    </form>
+                        </form>
+                    </div>
 
                     <!-- Until here -->
                 </div>
