--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -21,41 +21,59 @@
 			<!--   Filters  -->
             <div class="row">
                 <div class="col s12 m4">
-                    <div class="">
-                        <ul class="collection with-header hide-on-small-only">
-                            <li class="collection-header"><h4>Search By Region</h4></li>
-                            <li><a href="{% url 'products' %}"class="collection-item ">All Regions</a></li>
-                            {% for region in regions %}
-                            <li><a href="{% url 'products' %}?region={{region.name}}" class="collection-item {% if region.name == region_query_name %} active {% endif %}">{{ region.friendly_name }}</a></li>
-                            {% endfor %}
-                        </ul>
-                        <ul class="collection filter-products-collection with-header show-on-small">
-                            <li class="collection-header"><h5>Filter Products</h5></li>
-                            <li class="collection-item center-align">
-                                <a id="price-sort-button" data-sortkey="retail_price" data-direction="asc" class="waves-effect waves-light white black-text btn filter-products-btn">Lowest Price</a>
-                                <a id="rating-sort-button" data-sortkey="rating" data-direction="desc" class="waves-effect waves-light white black-text btn filter-products-btn">Best Ratings</a>
-                                <a id="new-sort-button" data-sortkey="new" data-direction="none" class="waves-effect waves-light white black-text btn filter-products-btn">New Products</a>
-                            </li>
-                            <li class="collection-item">
-                                <div class="input-field">
-                                    <select id="mobile-region-selector">
-                                    <option value="" disabled selected>Select Region</option>
-                                    {% for region in regions %}
-                                    <option value="{{ region.name }}" {% if region.name == region_query_name %}selected{% endif %}>{{ region.friendly_name }}</option>
-                                    {% endfor %}
-                                    </select>
-                                    <label>Filter Region</label>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
+
+                    <ul class="collection with-header hide-on-small-only">
+                        <li class="collection-header"><h4>Search By Region</h4></li>
+                        <li><a href="{% url 'products' %}"class="collection-item ">All Regions</a></li>
+                        {% for region in regions %}
+                        <li><a href="{% url 'products' %}?region={{region.name}}" class="collection-item {% if region.name == region_query_name %} active {% endif %}">{{ region.friendly_name }}</a></li>
+                        {% endfor %}
+                    </ul>
+                    <ul class="collection filter-products-collection with-header">
+                        <li class="collection-header"><h5>Filter Products</h5></li>
+                        <li class="collection-item mobile-selector">
+                            <div class="input-field show-on-small">
+                                <select id="mobile-region-selector">
+                                <option value="" disabled selected>Select Region</option>
+                                <option value="all-regions">All 7 Regions</option>
+                                {% for region in regions %}
+                                <option value="{{ region.name }}" {% if region.name == region_query_name %}selected{% endif %}>{{ region.friendly_name }}</option>
+                                {% endfor %}
+                                </select>
+                                <label>Filter Region</label>
+                            </div>
+                        </li>
+                        <li class="collection-item checkboxes-container">
+                            <p>
+                                <input id="price-sort-checkbox" data-sortkey="retail_price" data-direction="asc" type="checkbox" class="filled-in filter-products-checkbox"/>
+                                <label for="price-sort-checkbox">Lowest Price First</label>
+                            </p>
+                            <p>
+                                <input id="rating-sort-checkbox" data-sortkey="rating" data-direction="desc" type="checkbox" class="filter-products-checkbox filled-in"/>
+                                <label for="rating-sort-checkbox">Best Ratings First</label>
+                            </p>
+                            <p>
+                                <input id="new-sort-checkbox" data-sortkey="new" data-direction="none" type="checkbox" class="filter-products-checkbox filled-in"/>
+                                <label for="new-sort-checkbox">New Products Only</label>
+                            </p>
+                            {% if region_query_name != None or current_sorting != 'None_None' %}
+                            <div id="clear-filter-chip" class="chip">
+                                Clear Filter Search
+                                <i class="close material-icons">close</i>
+                            </div>
+                            {% endif %}
+                        </li>
+                    </ul>
                 </div>
                 <!-- Product Cards -->
                 <div class="col s12 m8">
+                    {% if products|length == 0 %}
+                    <h4>Sorry! No products matching your search.</h4>
+                    {% endif %}
                     <div class="row">
                         {% for product in products %}
-                        <div class="col s12 m6 product-card-container">
-                            <div class="card">
+                        <div class="col s12 m6 product-card-container ">
+                            <div class="card hoverable">
                                 <div class="card-image">
                                     {% if product.main_image %}
                                     <a href="{% url 'product_detail' product.id %}">
@@ -73,7 +91,7 @@
                                     {% if product.new_product%}
                                     <span class="new badge"></span>
                                     {% endif %}
-                                    <a class="black-text" href="{% url 'product_detail' product.id %}"><span class="card-title">{{ product.name|safe|truncatechars:31 }}</span></a>
+                                    <a class="black-text" href="{% url 'product_detail' product.id %}"><span class="card-title">{{ product.name|truncatechars:31 }}</span></a>
                                     <hr>
                                     <p id="card-price-text">${{ product.retail_price }}</p>
                                     <div class="rating-stars-container">
@@ -146,17 +164,18 @@
             var queryString = window.location.search;
             var urlParams = new URLSearchParams(queryString);
             var current_sortkey = urlParams.get('sort');
+
             if (current_sortkey == 'retail_price') {
-                $('#price-sort-button').removeClass('white').removeClass('black-text');
+                $('#price-sort-checkbox').attr("checked", "checked");
             } else if (current_sortkey == 'rating') {
-                $('#rating-sort-button').removeClass('white').removeClass('black-text');
+                $('#rating-sort-checkbox').attr("checked", "checked");
             } else if (current_sortkey == 'new') {
-                $('#new-sort-button').removeClass('white').removeClass('black-text');
+                $('#new-sort-checkbox').attr("checked", "checked");
             };
         });
 	</script>
     <script type="text/javascript">
-        $('.filter-products-btn').on('click', function() {
+        $('.filter-products-checkbox').change(function() {
             var currentUrl = new URL(window.location);
             var search_params = currentUrl.searchParams;
             var sortkey = $(this).attr("data-sortkey");
@@ -167,12 +186,25 @@
             var new_url = currentUrl.toString();
             window.location.replace(new_url);
         });
+        $('#clear-filter-chip').on('click', function(){
+            var currentUrl = new URL(window.location);
+            currentUrl.searchParams.delete("region");
+            currentUrl.searchParams.delete("sort");
+            currentUrl.searchParams.delete("direction");
+            window.location.replace(currentUrl);
+        });
+
         $('#mobile-region-selector').change(function() {
             var selector = $(this);
             var currentUrl = new URL(window.location);
             var selectedRegion = selector.val();
-            currentUrl.searchParams.set("region", selectedRegion);
-            window.location.replace(currentUrl);
-        })
+            if (selectedRegion != "all-regions") {
+                currentUrl.searchParams.set("region", selectedRegion);
+                window.location.replace(currentUrl);
+            } else {
+                currentUrl.searchParams.delete("region");
+                window.location.replace(currentUrl);
+            } 
+        });
     </script>
 {% endblock %}
