--- a/static/css/base.css
+++ b/static/css/base.css
@@ -229,13 +229,19 @@ header nav {
     overflow: visible !important;
 }
 
-.filter-products-btn {
-    width: 80%;
-    margin: 5px 0px;
+.checkboxes-container {
+    padding-left: 20% !important;
 }
-.product-card-container .card-image, .card-content {
+
+.product-card-container .card-image, .product-card-container .card-content {
     height: 250px;
     padding-top: 5px;
+}
+
+.product-card-container .card-title {
+    font-size: 23px !important;
+    margin-top: 10px;
+    height: 35%;
 }
 
 .product-card-container .card-image .material-placeholder {
@@ -251,10 +257,7 @@ header nav {
 
 .product-card-container .card-content {
     height: 250px;
-}
-
-.card-content .card-title {
-    height: 35%;
+    padding: 15px !important;
 }
 
 .rating-stars-container {
@@ -265,6 +268,7 @@ header nav {
 .product-card-container .chip {
     width: 100%
 }
+
 .chip a {
     color: rgba(0, 0, 0, 0.6) !important;
 }
@@ -273,12 +277,18 @@ header nav {
     float: left;
     margin-right: 14px;
     margin-left: 0px;
+    margin-top: 10px;
 }
 
 #card-price-text {
     color: #00a890;
     font-size: 1.2em;
     margin-bottom: 10px;
+}
+
+.select-wrapper input.select-dropdown {
+    color: #26a69a;
+    font-size: 1.2rem;
 }
 
 /* Detail Product Page */
@@ -306,6 +316,7 @@ header nav {
 .product-detail-table td, .product-detail-table th {
     font-size: 1rem;
 }
+
 .expandable-image-product {
     max-height: none !important;
 }
@@ -320,8 +331,16 @@ header nav {
 
 .input-field.col .dropdown-content [type="checkbox"] + label {
     top: -10px !important;
+    margin-top: 5px;
 }
 
+.grind-option-selector {
+    margin-top: 40px;
+}
+.option-label {
+    font-size: 1.2rem !important;
+    color: black !important;
+}
 /* ---------- Footer ------------ */
 
 footer.page-footer {
@@ -375,7 +394,10 @@ footer.page-footer {
     }
     .price-rating-container {
         text-align: left;
-}
+    }
+    .mobile-selector {
+        display: none !important;
+    }
 }
 
 /* Large */
